--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
       "disable_modules": ["WEBSOCKETS", "USER_AGENT"]
     },
     "discord": {
-      "token": "replaceme",
+      "token": "yourtokengoeshere",
       "default_prefix": {
         "enable": false,
         "prefix": "yat!"
